force-app/main/default/objects/Advisor_Portal_Mass_Close_Configuration__mdt/Advisor_Portal_Mass_Close_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration options for the mass close modal in the advisor portal.  Including dropdown options and conditionally required fields.  See https://asudev.jira.com/wiki/spaces/SFD/pages/2122383951/Custom+Metadata#Advisor-Portal-Mass-Close-Configuration for clear documentation on how to use.</description>
    <label>Advisor Portal Mass Close Configuration</label>
    <pluralLabel>Advisor Portal Mass Close Configurations</pluralLabel>
</CustomObject>