force-app/main/default/objects/Advisor_Portal_Mass_Close_Configuration__mdt/fields/Dropdown__c.field-meta.xml
<CustomField>
    <fullName>Dropdown__c</fullName>
    <description>Which dropdown is this value for?</description>
    <inlineHelpText>Which dropdown is this value for?</inlineHelpText>
    <label>Dropdown</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>