force-app/main/default/objects/Advisor_Portal_Mass_Close_Configuration__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is this configuration currently to be used?</description>
    <inlineHelpText>Is this configuration currently to be used?</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>