force-app/main/default/objects/Advisor_Portal_Mass_Close_Configuration__mdt/fields/Required_Fields__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields__c</fullName>
    <description>What other fields in the modal are required when this value is selected?</description>
    <inlineHelpText>What other fields in the modal are required when this value is selected?</inlineHelpText>
    <label>Required Fields</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>