force-app/main/default/objects/Advisor_Portal_Mass_Close_Configuration__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value in the dropdown menu</description>
    <inlineHelpText>The value in the dropdown menu</inlineHelpText>
    <label>Value</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>