force-app/main/default/objects/Advisor_Portal_Mass_Close_Configuration__mdt/listViews/Major_Details.listView-meta.xml
<ListView>
    <fullName>Major_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>Dropdown__c</columns>
    <columns>Value__c</columns>
    <columns>Required_Fields__c</columns>
    <columns>Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>Major Details</label>
</ListView>